--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-body {font-family:'PTSans';}
+body {font-family:'PTSans',arial,'sans-serif';}
 
 /* POPELT CSS */
 .noscroll {overflow:hidden;}
